--- a/Week3/indexwk3.html
+++ b/Week3/indexwk3.html
@@ -1,12 +1,15 @@
 <!doctype html>
+
+<html>
 <Head>
     <title>Silly CIA part1</title> 
+    <link rel="stylesheet" href="style.css">
 </Head>
 <body>
     <div>
     <h1>CIA Realizes it's Been Using Black Highlighters All These Years</h1>
     </div>
-    <div>
+    <div class="parent">
         <h2>Director Demands Investigation</h2>
     </div>
     <div>
@@ -29,8 +32,9 @@
             <li>the growth of the international drug trade</li>
         </ul>
     </div>
-    <div>
+    <div class="upper-case">
         <p>You might also like</p>
-            <a href="http://www.theonion.com/articles/cia-to-shift-focus-to-greeting-cards,4312/">CIA To Shift Focus To Greeting Cards</a>
+            <a class="link" href="http://www.theonion.com/articles/cia-to-shift-focus-to-greeting-cards,4312/">CIA To Shift Focus To Greeting Cards</a>
     </div>
 </body>
+</html>
