--- a/Week4/project2.html
+++ b/Week4/project2.html
@@ -6,24 +6,58 @@
     <link rel="stylesheet" href="project2.css">
 </Head>
 <body>
-    <nav>FOR THE LOVE OF COFFEE</nav>
+    <header>
+    <nav>
+        <a class="nav" href="https://fortheloveofcoffey.com/">FOR THE LOVE OF COFFEE</a>
+    </nav>
     <div class="filler1">
-        
     </div>
+    </header>
         <div>
             <p>
-                <img class="image1" src="https://images.unsplash.com/photo-1498603711404-95397d488706?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80" width="400px">    
+                <img class="image1" src="https://images.unsplash.com/photo-1514483935006-b311818acf27?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=634&q=80" width="400px">    
             </p>      
         </div>
-        <main>
-            <p>
-
-            </p>
+        <main class="main">
+            <p>So many people around the world love coffee, But so many of those people dont realize the great benefits you can get from have your basic cup of joe. Some of the benefits are. When people think of coffee, they usually think of its ability to provide an energy boost. However, according to some research, it can also offer some other important health benefits, such as a lower risk of liver cancer, type 2 diabetes, and heart failure.</p>
+              <ul>
+                <li>Improve Energy Levels and Make You Smarter.</li>
+                <li>Fight Depression and Make You Happier.</li>
+                <li>Help You Live Longer</li>
+              </ul>
         </main>
+        <h2>Fun table of stats:</h2>
+            <table>
+                <span>
+                    <img class="usaflag" src="https://images.unsplash.com/photo-1572873682924-02a47e84876a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80" width="120px";>
+                </span>
+                <span>
+                    <img class="canflag" src="https://images.unsplash.com/photo-1504976313612-eed10fa2bc11?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=968&q=80" width="100px";>
+                </span>
+                <div>
+                  <thead>
+                    <th>country</th>
+                    <th>% of coffee drinkers</th>
+                    <th>Lifespan</th>
+                  </thead>
+                  <tbody>
+                    <tr>
+                        <td>USA</td>
+                        <td>64%</td>
+                        <td>78.5 years</td>
+                    </tr>
+                  </tbody>
+                  <tbody>
+                    <tr>
+                        <td>Canada</td>
+                        <td>72%</td>
+                        <td>82.25 years</td>
+                    </tr>
+                  </tbody>
+                </div>
+            </table>
         <footer>
-            <p>
-                
-            </p>
+            This page was made possible by Hernandez
         </footer>
 
 </body>
